--- a/diplomka.tex
+++ b/diplomka.tex
@@ -1042,7 +1042,7 @@ Mimo databáze umožňuje AppEngine sdílení správy aplikace, uživatelské ro
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=14.5cm]{img/appengine.pdf}
+	\includegraphics[width=15cm]{img/appspot_window.pdf}
 	\caption{Administrační rozhraní platformy Google Appengine}
 	\label{analog_daily}
 \end{figure}
