--- a/diplomka.tex
+++ b/diplomka.tex
@@ -1117,7 +1117,30 @@ Zobrazení dat
 
 Na závěr této práce jsem se rozhodl vyvinutou aplikaci otestovat v reálném provozu. Cílem bylo zajistit, že je vyvinutá aplikace schopná nasazení do běžných webových aplikací, získat zpětnou vazbu a zkušenosti z provozu. 
 
-Vyvinutou aplikaci jsem nasadil u amerického startupu Chum.ly\footnote{http://chum.ly}. Chum.ly vzniklo jako platforma pro publikování do více sociálních sítí najednou. Nyní se zabývá více sociálními sítěmi a politikou. 
+Vyvinutou aplikaci jsem nasadil u amerického startupu Chum.ly\footnote{http://chum.ly}. 
+
+
+%quote
+CHUM.LY provides a single point of presence for reading and posting to your other social networks, as well as a local community blogging experience, where you can create or join public and private groups with shared interests.
+
+Chum.ly began in August, 2009, with the idea of creating a central blog platform that could connect to other social networks and exceed the 140 character limit of SMS and Twitter. We used version 8 of Laconica open source code as a starting point.
+
+Chum.ly has continued to refine the user interface and capabilities, driven by core user feedback and aided by core user community involvement. This involvement has enabled us to introduce features that are ahead of the curve, and later adopted by 'the big guys', such as inlined media and language translation. 
+
+The 'revenue model' and 'target market' have changed numerous times, and we believe we have finally found a sustainable non-advertising-based model. However, the most rewarding part of the experience, thus far, has been the friendships forged within the Chum.ly core user community.
+%quote
+
+CHUM.LY poskytuje jediný bod přítomnosti pro čtení a odesílání do jiných sociálních sítí, stejně jako místní zážitek komunitních blogů, kde si můžete vytvořit, nebo připojit k veřejné, či soukromé skupiny se společnými zájmy.
+
+Chum.ly vzniklo v srpnu 2009, s nápadem vytvořit centrální platformu, která by mohla propojit blog k dalším sociálním sítím a překročit omezení 140 znaků v SMS zprávě a na Twitteru. Použili jsme osmou open source softwaru Laconica, jako výchozí bod.
+
+Chum.ly pokračovalo ve vylepšování uživatelského rozhraní a funkcí, s pomocí zpětné vazby od uživatelů a podporovano komunitou uživatelů. Tato podpora nám umožnila zavést prvky, které jsou na špici, a později adoptovaný 'velké kluky', jako je inline média a jazyk překladu.
+
+'příjmy model' a 'cílový trh' mnohokrát změnily a věříme, že jsme konečně našli udržitelný ne-na-reklamě-založený model. Nicméně, nejvíce odměňující část zkušeností, byla zatím přátelství v rámci Chum.ly komunity uživatelů.
+
+
+
+
 
 Pro tento startup jsem měl možnost měsíc pracovat. Zabýval jsem se uživatelským rozhraním a mou hlavní prioritou bylo zjednodušit ovládaní aplikace a nejlépe poukázat na vše nadbytečné, co by mohlo být eliminováno. Tento úkol mě inspiroval k tomu abych se začal zabývat tím, jaké funkce aplikace jsou používany, kým a jak často. Z této myšlenky vznikl původní nápad vytvořit aplikaci, která monitoruje použivání jiné webové aplikace na základě znalosti uživatelů.
 
@@ -1149,6 +1172,8 @@ Zaznamenávaná data se skládají výhradně z událostí kliknutí na stránce
 Za sledované období padesáti pěti dní bylo zaznamenáno šedesát tisíc kliknutí. 
 
 --- TABULKA ---
+
+
 
 
 
