--- a/diplomka.tex
+++ b/diplomka.tex
@@ -193,7 +193,7 @@ Na začátku devadesátých let došlo ke zrození WWW stránek[reference]. Uži
 
 V roce devadesát čtyři vznikl grafický webový prohlížeč s názvem Mosaic[reference]. Díky jeho snadné instalaci a srozumitelnému uživatelskému rozhraní se web otevřel široké veřejnosti. Tento prohlížeč byl později přejmenován na Netscape a v roce 1995 ho používalo 80\% uživatelů internetu.
 
-V roce devadesát pět znikl Analog - nástroj pro analýzu logovacích souborů. Jeho autor Stephen Turner ho poskytoval zdarma jako freeware pro několik platform. Jednalo se o první sofistikovaný nástroj pro analýzu a zobrazení návštěvnosti webových stránek.
+V roce devadesát pět znikl Analog - nástroj pro analýzu logovacích souborů. Jeho autor Stephen Turner ho poskytoval zdarma jako freeware pro několik platform. Jednalo se o první sofistikovaný nástroj pro analýzu a zobrazení návštěvnosti webových stránek. V tabulce \ref{table:analog_output} je znázorněno, jak vypadal jeden z prvních textových výstupů programu analog.
 
 \bigskip
 
@@ -210,12 +210,28 @@ Logovací soubor obsahuje jden řádek pro každou návštěvu stránky, nebo so
 The data collection became unusable with the advent of search engines and their robots, proxies servers to surf anonymously, allocation of dynamic IP addresses by ISPs and cached content techniques. All these developments have rendered the use of log files inappropriate to analyze user behavior. The data contained in log files were indeed biased and unique visitor identification almost impossible. 
 \end{comment}
 
+\begin{comment}
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=14cm]{img/analog_daily.pdf}
 	\caption{Analog - denní návštěvnost}
 	\label{analog_daily}
 \end{figure}
+\end{comment}
+
+
+\begin{tabular}{p{2cm} p{3cm} p{2cm} p{5cm}}
+\label{table:analog_output}\\
+den&požadavků&stránek&\\
+\hline
+Pondělí			& 2012965			& 626	& ========= \\
+Úterý			& 2490837			& 788	& ========== \\
+Středa			& 3193776			& 880	& =========== \\
+Čtvrtek			& 3188571			& 941	& ============= \\
+Pátek			& 3589076			& 1076	& ===============\\
+Sobota			& 3589076			& 1007	& ============= \\
+Neděle			& 3036246			& 1261	& ======================\\
+\end{tabular}
 
 
 V roce 1996 byl v obou nejpoužívanějších prohlížečích\footnote{V roce 1996 měl Netscape Navigator zhruba 80\% podíl a Internet Explorer 14\%} k dispozici JavaScript. 
@@ -409,7 +425,7 @@ Ještě zajímavější využití této informace je v případě, že uživatel
 
 V query string části adresy se nacházejí údaje, které modifikují obsah stránky. Je to část adresy stránky za otazníkem a není povinná. Například, pokud zadáte "web analytics" do hledání v Google, bude adresa stránky vypadat následovně:
 
-\begin{lstlisting}[label=src:Plain,caption=Adresa ve vyhledávači pro dota "web analytics"]
+\begin{lstlisting}[label=src:Plain,caption=Adresa ve vyhledávači pro dotaz web analytics]
 www.google.com/search?sourceid=chrome&ie=UTF-8&q=web+analytics
 \end{lstlisting}
 
@@ -1443,7 +1459,7 @@ Vytvořil jsem metodu i nástroj, který umožňuje snadno měřit webové aplik
 
 % výhľady do budůcna
 
-Tuto aplikaci jsem vyvinul se záměrem prorazit na americký trh s vlastním produktem pro podporu webových aplikací. Budu pokračovat v jejím vývoji s klíčovými zákazníky a v blízké době chci začít s monetizací.
+Tuto aplikaci jsem vyvinul se záměrem prorazit na americký trh s vlastním produktem pro podporu webových aplikací. Budu pokračovat v jejím vývoji s klíčovými zákazníky a v horizontu několika měsíců chci začít s monetizací.
 
 
 
