todo notes added

--- a/diplomka.tex
+++ b/diplomka.tex
@@ -9,6 +9,25 @@
 \usepackage{longtable}
 %\usepackage{dialogue}
 
+
+
+\begin{comment}
+TODO
+ - všem tabulkám doplnit CAPTION
+ - odkazovat na tabulky
+ - doplnit REFERENCE
+ - doplnit text před nasazením
+ - dopnit názor chum.ly
+ - projít celou diplomku
+ - dopsat ZHODNOCENÍ
+ 
+Před tiskem:
+ - ******************* upravit DATUM u podpisu *****************
+	
+\end{comment}
+
+
+
 \setcounter{secnumdepth}{2}
 
 \begin{comment}
@@ -32,7 +51,7 @@
 
 \EnglishTitle{A tool for monitoring web application user behaviour}
 
-\SubmissionDate{20. dubna 2011}
+\SubmissionDate{5. května 2011}
 
 \PrintPublicationAgreement{true}
 
@@ -220,8 +239,11 @@ The data collection became unusable with the advent of search engines and their 
 \end{comment}
 
 
+
+\begin{table}[h] 
+\label{table:analog_output}
+\centering      
 \begin{tabular}{p{2cm} p{3cm} p{2cm} p{5cm}}
-\label{table:analog_output}\\
 den&požadavků&stránek&\\
 \hline
 Pondělí			& 2012965			& 626	& ========= \\
@@ -232,7 +254,8 @@ Pátek			& 3589076			& 1076	& ===============\\
 Sobota			& 3589076			& 1007	& ============= \\
 Neděle			& 3036246			& 1261	& ======================\\
 \end{tabular}
-
+ \caption{Výpis návštěvnosti z progrmau Analog} 
+\end{table}
 
 V roce 1996 byl v obou nejpoužívanějších prohlížečích\footnote{V roce 1996 měl Netscape Navigator zhruba 80\% podíl a Internet Explorer 14\%} k dispozici JavaScript. 
 
