comments on UD from Marc

--- a/diplomka.tex
+++ b/diplomka.tex
@@ -1522,7 +1522,32 @@ Názor na nástroj od Chum.ly (možná)
 
 \subsection{Zhodnocení}
 
+Na závěr jsem požádal představitele Chum.ly o názor na vyvinutý nástroj. Zajímalo mě, jak se jim jeví vzhledem k praktické využitelnosti pro jejich webovou aplikaci, co konkrétně je zaujalo a jaký je rozdíl mezi jinými nástroji, které používají.
 
+Aplikaci jsem prezentoval technickému řediteli Chum.ly Marcu Quinlivanovi\footnote{Marc Quinlivan \url{http://ie.linkedin.com/in/quinlivanmarc}}, který ji již předtím používal a toto je jeho vyjádření.
+
+\begin{quote}
+UseDriven has provided us with some very useful statistics about our
+service. It allows us to trend our user loyalty and track returning visits. We can also see which users are most active and which users have not
+returned in a while. This allows us to identify users and contact them to better understand the reasons why they are no longer active.
+
+With the feature tracker we can see which buttons or features are being used most and which ones are not being used at all. This can assist with our site design as we can move more popular features to a better position, remove unused features, or possibly move those less used features to a location where they will be more visible to try to generate more use.
+
+With UseDriven we are able to gain more in-depth details about our users and visitors than is possible with similar services, such as Google
+Analytics.
+\end{quote}
+
+Uvádím také volný překlad do češtiny.
+
+\begin{quote}
+UseDriven nám poskytl některé velmi užitečné statistiky o naší službě. Umožňuje nám sledovat trend naší uživatelské loajality a sledovat vracející se návštěvy. Můžeme také vidět, kteří uživatelé jsou nejaktivnější, a kteří se dlouho neukázali. To nám umožňuje identifikovat odcházející uživatele, spojit se s nimi a lépe pochopit důvody, proč již nejsou aktivní.
+
+Pomocí sledování četnosti používání funkcí vidíme, která tlačítka a funkce jsou používány nejvíce a které nejsou používány vůbec. To může pomoci s designem našeho situ, může posunout populárnější funkce pro na lepší pozice a odstranit nepoužívané funkce, případně přesunout ty méně používané funkce do místa, kde budou více vidět, abychom se pokusili zvýšit jejich používanost.
+
+Pomocí UseDriven jsme schopni získat více hloubkové informace o našich uživatelích a návštěvnících, než je možné s podobnými službami, jako jsou Google Analytics.
+\end{quote}
+
+\begin{comment}
 \subsubsection{Budoucí vývoj a uplatnění}
 
 Nebudu navrhovat změny pro chum.ly, ale změny nástroje.
@@ -1558,7 +1583,7 @@ O procesu
   	- jak si urovnám psaní myšlenky
   
 Jak se změnil můj pohled na vývoj aplikací?
-
+\end{comment}
 
 
 \section{Závěr}
