final touches, references

--- a/diplomka.tex
+++ b/diplomka.tex
@@ -1689,6 +1689,8 @@ Michal Hantl
 \bibitem{clf} W3C,
 \textit{Common logfile format}, dostupné z url \url{www.w3.org/Daemon/User/Config/Logging.html#common-logfile-format}.
 
+\bibitem{clf} Justin Cutroni,
+\textit{How Does Google Analytics Track Conversion Referrals?}, dostupné z url \url{http://cutroni.com/blog/2006/11/10/how-does-google-analytics-track-conversion-referals/}.
 
 
 
