--- a/diplomka.tex
+++ b/diplomka.tex
@@ -15,9 +15,7 @@
 
 \begin{comment}
 TODO
- - doplnit text před nasazením
  - projít celou diplomku
- - přepsat Abstrakt
  - zkontrolovat TODO
  - znovu projít chyby
  - znovu zkontrolovat přesahy
@@ -26,6 +24,7 @@ TODO
 Projít si: \subsection{Webové aplikace}
  
 DONE
+ - přepsat Abstrakt
  - vyhledat " a a "
  - doplnit REFERENCE
  - všem tabulkám doplnit CAPTION
@@ -69,7 +68,7 @@ Pokusil, ještě projdu.
 
 \Title{Nástroj pro monitorování chování uživatelů webových aplikací}
 
-\EnglishTitle{A tool for monitoring web application user behaviour}
+\EnglishTitle{Tool for Behavior Monitoring of Web Applications Users}
 
 \SubmissionDate{5. května 2011}
 
@@ -77,20 +76,18 @@ Pokusil, ještě projdu.
 
 
 
-\Thanks{Rád bych na tomto místě poděkoval svým rodičům za podporu během celého studia, panu Ing. Michalovi Radeckému, za vedení během vypracování diplomové práce a své přítelkyni Míše.}
+\Thanks{Rád bych na tomto místě poděkoval svým rodičům za podporu během celého studia, panu Ing. Michalovi Radeckému, za vedení během vypracování diplomové práce a své přítelkyni Míše za neskonalou toleranci, kterou mi v tomto životě projevuje.}
 
 
 
 
 
-\CzechAbstract{
-Cílem práce je vytvoření nástroje, jakožto podpory pro aplikaci a navržení metody zí\-ská\-vá\-ní informací o chování uživatele webové aplikace. Nebude se jednat o klasický přístup založený na sběru statistických dat anonymních návštěvníků, ale o využití znalosti o konkrétním uživateli, jeho chování, využívání funkcí a služeb webové aplikace.
+\CzechAbstract{Tato diplomová práce se zabývá problematikou webové analytiky, novou metodou měření uživatelské interakce s webem a nástrojem pro analýzu webových aplikací. Úvodem nastiňuje nové výzvy we webové analytice. V kapitole Webová analytika popisuje historii sběru a vyhodnocování dat na webu a současné způsoby sběru a interpretace dat. Kapitola Analýza webových aplikací se zaměřuje na webové aplikace z pohledu nové metody sběru a interpretace dat. Kapitola Technické řešení se popisuje detaily zpracování dat a využívané technologie. Případová studie se věnuje nasazení nástroje do provozu na platformě Google AppEngine a zhodnocuje výsledky.
 }
 
 \CzechKeywords{webová analytika, chování uživatelů, webová aplikace, diplomová práce}
 
-\EnglishAbstract{
-The goal of this thesis is to create a tool to aid web application development and to create a method for gaining knowledge of the web application users' behaviour. It is not the case of usual anonymized data gathering, but making use of the knowledge of concrete user, his behaviour and his usage of web app's functions and services. 
+\EnglishAbstract{This thesis is concerned with web analytics, new method of measuring user interaction with the web and with a tool for web application analysis. Chapter one outlines new challenges in web analytics. Chapter two describes history of web analytics' data gathering and interpretation. Chapter three is focused on web applications from the point of new way of gathering and data interpretation. Chapter four describes the details of data processing and technologies involved. In fifth chapter, the created tool is deployed on Google AppEngine and used in production application and then conclusions are drawn.
 }
 
 \EnglishKeywords{web analytics, user behaviour, web application, master thesis}
@@ -178,9 +175,6 @@ Cílem práce je vytvoření nástroje, jakožto podpory pro aplikaci a navržen
 	\item Zhodnoťte vyvinutý nástroj především z pohledu reálného nasazení a jeho přínosů, porovnejte jej s obdobnými nástroji a jejich metodami.
 \end{itemize}
 
-\begin{comment}
-	TODO tu bych mohl hodit ještě nějaký popis
-\end{comment}
 
 
 
@@ -193,7 +187,6 @@ Tato kapitola popisuje vznik webové analytiky a způsoby sběru a interpretace 
 
 \subsection{Historie}
 
-%TODO přepsat trošku
 
 Dnešní nástroje v podstatě kopírují způsob interpretace dat a proto je vhodné nastínit historii webové analytiky.
 
@@ -1190,7 +1183,7 @@ The 'revenue model' and 'target market' have changed numerous times, and we beli
 
 Uvádím také volný překlad do češtiny.
 
-% TODO upravit!
+
 \begin{quote}
 CHUM.LY poskytuje pro čtení a odesílání do jiných sociálních sítí v jednom místě, stejně jako komunitní blogy, kde si můžete vytvořit, nebo připojit se k veřejné, či soukromé skupině se společnými zájmy.
 
